# hmm-kit

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
hmm_kit/: constant.py  utils.py
hmm_kit/core/: base.py  covariates.py  viterbi.py
tests/: test_algorithms.py  test_viterbi.py
