[tool.poetry]
name = "hmm-kit"
version = "0.1.0"
description = "A practice Python package designed for estimation and analysis of Hidden Markov Model (HMM)."
authors = ["'liangchenn' <'r08323022@ntu.edu.tw'>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
numba = "^0.59.1"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
hmmlearn = "^0.3.2"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
